--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 extends: airbnb
 rules:
   comma-dangle: 0
+  no-loop-func: 1
   no-multi-spaces: 0
   no-script-url: 1
   no-use-before-define: [2, 'nofunc']
