delete everything except server code. split the app in two.

--- a/.cfignore
+++ b/.cfignore
@@ -1,5 +1,4 @@
 **/node_modules/*
-client
-server/config.json
-server/**/VCAP_SERVICES.json
-server/**/ENV_VARS.json
+config.json
+VCAP_SERVICES.json
+ENV_VARS.json
