--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-node_modules/*
-public/bundle.js
-public/*.css
-server/lib/*
-server/**/VCAP_SERVICES.json
-server/**/ENV_VARS.json
-*.sublime*
+node_modules
+VCAP_SERVICES.json
+ENV_VARS.json
 *.log
